<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/embed"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
        >


    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@android:id/list"
            >
    </ListView>

    <TextView android:id="@android:id/empty"
              android:text="@string/favorite"
              android:layout_width="fill_parent" android:layout_height="fill_parent">
    </TextView>

    <LinearLayout
            android:id="@id/bar"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

        <Button
                android:id="@+id/b_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                >
        </Button>

        <Button
                android:id="@id/b_cancel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/cancel"
                >

        </Button>

    </LinearLayout>


</FrameLayout>
